--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <body>
 
 <form id="tigon-form">
-    <textarea id="tigon-form-input" type="text" name="input" placeholder="0.3.x YAML -> 0.4.x YAML" rows="20" cols="70"></textarea>
+    <textarea id="tigon-form-input" type="text" name="input" placeholder="tigon is loading..." rows="20" cols="70"></textarea>
     <br/><input id="tigon-form-submit" type="submit" value="Submit" />
 </form>
 <div id="tigon-result" style="font-family: Courier, monospace; white-space: pre; "></div>
 
 <script src="yaml.min.js"></script>
+<script src="nbt.js"></script>
 <script src="index.js"></script>
 
 </body>
